[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "price-checker"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "aws-lambda-powertools>=3.0.0",
    "aws-xray-sdk>=2.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 120